# RiskAI-Agent

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  TESTING.md  claude.md  pyproject.toml  requirements.txt
.claude/: settings.json
config/: README.md  calibration_rules.json  fmea_explicit.py  fmea_standards.py  reliability_data.json
fmea-risikoanalyse-workspace/: fmea_baseline.db
plans/: 001_FMEA-Framework-Architektur_2026-03-01.md  002_RiskAI-Optimierung-Strategie_2026-03-01.md  003_Logo-Design-Briefing_2026-03-01.md  004_Color-Concept_NexaVerse_2026-03-01.md  005_Automatisierung-Workflow-Steuerung_2026-03-01.md  006_FMEA-Report-Design-Previews_2026-03-09.md  007_FMEA-Skill-Upgrade-Report-MoC_2026-03-10.md  008_Projekt-Optimierung-Skill-Review_2026-03-19.md  009_Projekt-Optimierung-Skill-Review_2026-03-20.md
templates/: fmea_report.html  fmea_style.css  fmea_style_terracotta.css  footer.html  header.html
tests/: eval_fmea_rpz.py  eval_goldstandard.py  helpers.py  test_calibration.py  test_export.py  test_fmea_standards.py  test_full_pipeline.py  test_generate_measures.py  test_load_plant_data.py  test_quality_report.py  test_reliability_lookup.py  test_report_generator.py  test_rpz_calculator.py  test_schema_validation.py  test_skills.py  test_storage.py  test_structure_analysis.py  test_validate_anlagendaten.py  test_validate_completeness_direct.py  test_validate_completeness_enhanced.py  test_workflow_state.py
tools/: README.md  _base.py  apply_explicit_measures.py  calibration.py  chart_comparison.py  cleanup_generic_data.py  clear_fmea_for_project.py  export.py  failure_templates.py  fmea_chat_server.py  fmea_loader.py  fmea_proper_analysis.py  generate_design_previews_v2.py  generate_measures.py  init_fmea_fresh.py  insert_fmea_explicit.py  insert_measures.py  load_plant_data.py  mermaid_renderer.py  migrate_db.py  moc_manager.py  observability.py  poc_run.py  quality_report.py  reliability_lookup.py  report_generator.py  review.py  rpz_calculator.py  run_full_fmea.py  set_agent_status.py  setup_poc.py  storage.py  storage_migrations.py  structure_analysis.py  update_checklist.py  (+4 more)
(+166 files in other folders)
