[project]
name = "riskai-agent"
version = "0.6.0"
description = "KI-gestütztes FMEA-Risikoanalyse-Framework (WAT-Architektur)"
requires-python = ">=3.10"
dependencies = [
    "openpyxl>=3.1.0",
    "fpdf2>=2.8.0",
    "matplotlib>=3.8.0",
    "squarify>=0.4.3",
    "jinja2>=3.1.0",
    "playwright>=1.40.0",
    "striprtf>=0.0.26",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4.0",
]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
