[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "riskai-agent"
version = "0.6.0"
description = "KI-gestütztes FMEA-Risikoanalyse-Framework (WAT-Architektur)"
requires-python = ">=3.10"
dependencies = [
    "openpyxl>=3.1.0",
    "fpdf2>=2.8.0",
    "matplotlib>=3.8.0",
    "squarify>=0.4.3",
    "jinja2>=3.1.0",
    "playwright>=1.40.0",
    "striprtf>=0.0.26",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=5.0",
    "ruff>=0.4.0",
]

# Nur die importierbaren Pakete einschließen — verhindert, dass setuptools
# plans/, workflows/, templates/ als Top-Level-Pakete entdeckt (Flat-Layout-Fehler).
[tool.setuptools.packages.find]
include = ["tools*", "config*"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
# E501: Zeilenlänge (line-length oben gesetzt).
# E741: "ambiguous variable name" — S/O/D ist die kanonische FMEA-Notation
#       (Severity/Occurrence/Detection, RPZ = S × O × D); kein Code-Smell.
ignore = ["E501", "E741"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=tools --cov=config --cov-report=term-missing -q"

[tool.coverage.run]
source = ["tools", "config"]
omit = ["tools/__pycache__/*", "config/__pycache__/*"]

[tool.coverage.report]
show_missing = true
skip_empty = true
fail_under = 0
